2006-05-26  Yen-Ju Chen <yjchenx at gmail>

    * GNUmakefile:
    Fix compilation with x11=yes on FreeBSD.

2006-05-25  Yen-Ju Chen <yjchenx at gmail>

    * GNUmakefile:
    * Controller.m:
    * MenuBarWindow.m:
    Use XWindowServerKit when compiling with 'make x11=yes'.
    It will keep menubar staying in every desktkop.
    * Avoid showing up in taskbar and pager.
    * Reserve the top area to avoid being covered by windows while maximized.

2006-05-21  Saso Kiselkov <skiselkov@gmail.com>

    * MenuletLoader.m:
    Allow loading menulets outside main bundle.

2006-05-16  Saso Kiselkov <skiselkov@gmail.com>

    * Subprojects/AboutEtoileEntry/AboutEtoileEntry.pmproj:
    * Subprojects/AboutEtoileEntry/GNUmakefile:
    * Subprojects/AboutEtoileEntry/GNUmakefile.preamble:
    * Subprojects/AboutEtoileEntry/GNUmakefile.postamble:
    * Subprojects/AboutEtoileEntry/AboutEtoileEntry.m:
    * Subprojects/AboutEtoileEntry/ETMachineInfo.h:
    * Subprojects/AboutEtoileEntry/ETMachineInfo.m:
    * Subprojects/AboutEtoileEntry/ETMachineInfo_Darwin.m:
    * Subprojects/AboutEtoileEntry/ETMachineInfo_FreeBSD.m:
    * Subprojects/AboutEtoileEntry/ETMachineInfo_Linux.m:
    * Subprojects/AboutEtoileEntry/ETMachineInfo_OpenBSD.m:
    * Subprojects/AboutEtoileEntry/TRSysctl.h:
    * Subprojects/AboutEtoileEntry/TRSysctlByName.h: Implemented changes
      to machine-info determining written by David Chrisnall.

2006-05-13  Saso Kiselkov <skiselkov@gmail.com>

    * MenuletLoader.m: Fixed a bug, pointed out by Chris B. Vetter, which
      was causing exceptions when a menulet failed to initialize properly.

2006-05-10  Saso Kiselkov <skiselkov@gmail.com>

    * Subprojects/AboutEtoileEntry/ScrollingImageView.m: Fixed
      text view centering issues.

2006-05-10  Saso Kiselkov <skiselkov@gmail.com>

    * Subprojects/AboutEtoileEntry/AboutEtoileEntry.m: Fixed bug
      preventing the CPU frequency to be displayed on FreeBSD.